--- a/assets/posts.css
+++ b/assets/posts.css
@@ -1,22 +1,22 @@
 body {
     font-family: Helvetica, Arial, Vernada, Tahoma, STFangsong, STXihei, "Songti SC", "Microsoft YaHei", Heiti, sans-serif;
     font-size: 18px;
-    margin: 5% 10% 5% 10%;
+    margin: 0 auto;
     padding: 2% 5% 5% 5%;
     width: 70%;
+    max-width: 1100px;
     line-height: 150%;
 }
 
 H1 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica,"Noto Sans SC";
 }
 
 H2 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica,"Noto Sans SC";
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
-    border-bottom: 2px LightGrey solid;
     width: 90%;
     line-height: 150%;
     color: DarkGreen;
@@ -24,10 +24,9 @@ H2 {
 
 
 H3 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, "Noto Sans SC";
     margin-top: 40px;
     margin-bottom: 30px;
-    border-bottom: 1px LightGrey solid;
     width: 80%;
     line-height: 150%;
     color: DarkBlue;
@@ -35,10 +34,9 @@ H3 {
 
 
 H4 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica,"Noto Sans SC"; 
     margin-top: 40px;
     margin-bottom: 30px;
-    border-bottom: 1px LightGrey solid;
     width: 80%;
     line-height: 150%;
     color: DarkBlue;
@@ -59,8 +57,7 @@ blockquote {
 
 pre {
     font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
-    font-size: 75%;
-    border: solid 1px lightgrey;
+    font-size: 100%;
     background-color: Ivory;
     padding: 5px;
     line-height: 130%;
@@ -71,7 +68,7 @@ pre {
 
 code {
     font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
-    font-size: 90%;
+    font-size: 100%;
 }
 
 
