--- a/assets/worg.css
+++ b/assets/worg.css
@@ -1,14 +1,16 @@
 body {
     font-family: Helvetica, Arial, Vernada, Tahoma, STFangsong, STXihei, "Songti SC", "Microsoft YaHei", Heiti, sans-serif;
     font-size: 18px;
-    margin: 5% 10% 5% 10%;
-    padding: 2% 5% 5% 5%;
+    margin: 0 auto;
     width: 70%;
+    max-width: 1100px;
     line-height: 150%;
 }
 
 H1 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 H2 {
@@ -16,7 +18,6 @@ H2 {
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
-    border-bottom: 2px LightGrey solid;
     width: 90%;
     line-height: 150%;
     color: DarkGreen;
@@ -27,7 +28,6 @@ H3 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
     margin-top: 40px;
     margin-bottom: 30px;
-    border-bottom: 1px LightGrey solid;
     width: 80%;
     line-height: 150%;
     color: DarkBlue;
@@ -38,7 +38,6 @@ H4 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
     margin-top: 40px;
     margin-bottom: 30px;
-    border-bottom: 1px LightGrey solid;
     width: 80%;
     line-height: 150%;
     color: DarkBlue;
@@ -60,7 +59,6 @@ blockquote {
 pre {
     font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
     font-size: 75%;
-    border: solid 1px lightgrey;
     background-color: Ivory;
     padding: 5px;
     line-height: 130%;
