--- a/assets/posts.css
+++ b/assets/posts.css
@@ -14,8 +14,8 @@ H1 {
 
 H2 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica,"Noto Sans SC";
-    margin-bottom: 60px;
-    margin-bottom: 40px;
+    margin-top: 5%;
+    margin-bottom: 30px;
     padding: 5px;
     width: 90%;
     line-height: 150%;
