--- a/assets/posts.css
+++ b/assets/posts.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Helvetica, Arial, Vernada, Tahoma, STFangsong, STXihei, "Songti SC", "Microsoft YaHei", Heiti, sans-serif;
+    font-family: Georgia, STFangsong, STXihei, "Songti SC", "Microsoft YaHei", Heiti, sans-serif;
     font-size: 18px;
     margin: 0 auto;
     padding: 2% 5% 5% 5%;
